--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9944,9 +9944,10 @@
     <Content Include="Areas\SeguridadAcceso\Views\Usuario\_CmbEmpresa_det.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_016.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_026.cshtml" />
-    <Content Include="Areas\RRHH\Views\Rdep\Modificar.cshtml" />
+    <Content Include="Areas\RRHH\Views\Rdep\Modificar_x_Empleado.cshtml" />
     <Content Include="Areas\RRHH\Views\Rdep\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\Rdep\_GridViewPartial_rdep.cshtml" />
+    <Content Include="Areas\RRHH\Views\Rdep\Modificar.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -10070,7 +10071,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
