25horas al dia vida mia

--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9948,6 +9948,7 @@
     <Content Include="Areas\RRHH\Views\Rdep\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\Rdep\_GridViewPartial_rdep.cshtml" />
     <Content Include="Areas\RRHH\Views\Rdep\Modificar.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\CierrePorModuloPorSucursal\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
