--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1320,6 +1320,7 @@
     <Compile Include="Reportes\RRHH\ROL_024_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_025_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_026_Data.cs" />
+    <Compile Include="Reportes\RRHH\ROL_027_Data.cs" />
     <Compile Include="ro_Acta_Finiquito.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
