--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -436,6 +436,7 @@
     <Compile Include="Reportes\RRHH\ROL_024_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_025_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_026_Info.cs" />
+    <Compile Include="Reportes\RRHH\ROL_027_Info.cs" />
     <Compile Include="RRHH\MTE\ro_archivosCSV_Info.cs" />
     <Compile Include="RRHH\RDEP\Rdep.cs" />
     <Compile Include="RRHH\rol_detalle_x_rubro_acumulado_Info.cs" />
