--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9959,6 +9959,7 @@
     <Content Include="Areas\Contabilidad\Views\CierrePorModuloPorSucursal\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\AjusteBeneficiosSociales\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\AjusteBeneficiosSociales\_GridViewPartial_AjusteBeneficiosSociales.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_027.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
