--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1765,6 +1765,9 @@
     <Compile Include="SPROL_025_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
+    <Compile Include="SPROL_027_Result.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
     <Compile Include="spROL_DecimosCSV_Result.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
