--- a/ERP/Core.Erp.Web/Web.config
+++ b/ERP/Core.Erp.Web/Web.config
@@ -190,7 +190,7 @@
     </compilers>
   </system.codedom>
   <devExpress>
-    <themes enableThemesAssembly="true" theme="MaterialCompact" customThemeAssemblies="" />
+    <themes enableThemesAssembly="true" theme="MaterialCompact" customThemeAssemblies="" baseColor="#2E75BB"/>
     <compression enableHtmlCompression="false" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true" />
     <settings rightToLeft="false" checkReferencesToExternalScripts="true" doctypeMode="Html5" accessibilityCompliant="false" />
     <errors callbackErrorRedirectUrl="" />
