--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -368,6 +368,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_012_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_013_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_014_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_015_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_001_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_002_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_003_Info.cs" />
