--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -387,6 +387,7 @@
     <Compile Include="Reportes\RRHH\ROL_025_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_026_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_027_Bus.cs" />
+    <Compile Include="Reportes\RRHH\ROL_028_Bus.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Bus.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Detalle_Bus.cs" />
     <Compile Include="RRHH\ro_archivosCSV_Bus.cs" />
