--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9974,6 +9974,7 @@
     <Content Include="Areas\Facturacion\Views\ParametrosFacturacion\_CmbCliente_Parametro.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_015.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_028.cshtml" />
+    <Content Include="Areas\RRHH\Views\Vacaciones\_GridViewPartial_solicitud_vacaciones_det.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
