--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -884,6 +884,12 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_013_Rpt.Designer.cs">
       <DependentUpon>CXP_013_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_014_resumen_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_014_resumen_Rpt.Designer.cs">
+      <DependentUpon>CXP_014_resumen_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\CuentasPorPagar\CXP_014_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10290,6 +10296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_013_Rpt.resx">
       <DependentUpon>CXP_013_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_014_resumen_Rpt.resx">
+      <DependentUpon>CXP_014_resumen_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_014_Rpt.resx">
       <DependentUpon>CXP_014_Rpt.cs</DependentUpon>
