oigo una vez q dice sin razon vos siempre cambiando shaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa no cambias mas

--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1285,6 +1285,7 @@
     <Compile Include="Reportes\Facturacion\FAC_012_Data.cs" />
     <Compile Include="Reportes\Facturacion\FAC_013_Data.cs" />
     <Compile Include="Reportes\Facturacion\FAC_014_Data.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_015_Data.cs" />
     <Compile Include="Reportes\Importacion\IMP_001_Data.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_Data.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_gastos_Data.cs" />
@@ -1737,6 +1738,9 @@
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="SPFAC_011_Result.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SPFAC_015_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="SPINV_003_Result.cs">
