--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -1017,6 +1017,12 @@
     <Compile Include="Reportes\Facturacion\FAC_014_Rpt.Designer.cs">
       <DependentUpon>FAC_014_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Facturacion\FAC_015_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Facturacion\FAC_015_Rpt.Designer.cs">
+      <DependentUpon>FAC_015_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Importacion\IMP_002_gastos_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -9989,6 +9995,7 @@
     <Content Include="Areas\RRHH\Views\PreLiquidacion\_GridViewPartial_liquidacion_empleado.cshtml" />
     <Content Include="Areas\RRHH\Views\PreLiquidacion\_CmbEmpleado_acta.cshtml" />
     <Content Include="Areas\Inventario\Views\EgresoInventario\_CmbPersona_EgresoInv.cshtml" />
+    <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_015.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
