--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -386,6 +386,7 @@
     <Compile Include="Reportes\Facturacion\FAC_013_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_014_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_015_Info.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_016_Info.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_gastos_Info.cs" />
     <Compile Include="Reportes\Importacion\IMP_001_Info.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_Info.cs" />
