when the nigth has come and no se que sigue... like we se.. no i wont be afraid... just de lon en you stand.. stand by me... oooooooooooooooooo darling darling you stand ba mi

--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1287,6 +1287,7 @@
     <Compile Include="Reportes\Facturacion\FAC_014_Data.cs" />
     <Compile Include="Reportes\Facturacion\FAC_015_Data.cs" />
     <Compile Include="Reportes\Facturacion\FAC_016_Data.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_017_Data.cs" />
     <Compile Include="Reportes\Importacion\IMP_001_Data.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_Data.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_gastos_Data.cs" />
