--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -1029,6 +1029,12 @@
     <Compile Include="Reportes\Facturacion\FAC_016_Rpt.Designer.cs">
       <DependentUpon>FAC_016_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Facturacion\FAC_017_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Facturacion\FAC_017_Rpt.Designer.cs">
+      <DependentUpon>FAC_017_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Importacion\IMP_002_gastos_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10003,6 +10009,7 @@
     <Content Include="Areas\Inventario\Views\EgresoInventario\_CmbPersona_EgresoInv.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_015.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_016.cshtml" />
+    <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_017.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -10390,6 +10397,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Facturacion\FAC_016_Rpt.resx">
       <DependentUpon>FAC_016_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Facturacion\FAC_017_Rpt.resx">
+      <DependentUpon>FAC_017_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Importacion\IMP_002_gastos_Rpt.resx">
       <DependentUpon>IMP_002_gastos_Rpt.cs</DependentUpon>
