--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -337,6 +337,7 @@
     <Compile Include="Reportes\Facturacion\FAC_014_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_015_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_016_Bus.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_017_Bus.cs" />
     <Compile Include="Reportes\Importacion\IMP_001_Bus.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_Bus.cs" />
     <Compile Include="Reportes\Importacion\IMP_003_Bus.cs" />
