--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10011,6 +10011,7 @@
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_015.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_016.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_017.cshtml" />
+    <Content Include="Areas\Banco\Views\ConciliacionBanco\_GridViewPartial_banco_conciliacion_det.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
