--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -428,6 +428,7 @@
     <Compile Include="RRHH\ro_empleado_x_ro_rubro_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_x_ro_tipoNomina_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_x_rubro_acumulado_Bus.cs" />
+    <Compile Include="RRHH\ro_empleado_x_rubro_acumulado_detalle_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_x_titulos_Bus.cs" />
     <Compile Include="RRHH\ro_FormulaHorasRecargo_Bus.cs" />
     <Compile Include="RRHH\ro_Historico_Liquidacion_Vacaciones_Bus.cs" />
