--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10015,6 +10015,7 @@
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\_CmbCuenta_contable_ContaFin.cshtml" />
     <Content Include="Areas\RRHH\Views\EmpleadoRubroAcumulado\_GridViewPartial_rubros_acumulados_detalle.cshtml" />
     <Content Include="Areas\RRHH\Views\EmpleadoRubroAcumulado\_CmbRubro.cshtml" />
+    <Content Include="Areas\RRHH\Views\EmpleadoRubroAcumulado\Modificar.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -10138,6 +10139,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
